Added DB connectivity + JdbcDao classes + spring-web dependency.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# datasource connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/E-Commerce-Admin
+spring.datasource.name=E-Commerce-Admin
+spring.datasource.username=postgres
+spring.datasource.password=postgres1
