--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/E-Commerce-Admin
 spring.datasource.name=E-Commerce-Admin
 spring.datasource.username=postgres
 spring.datasource.password=postgres1
+
+server.error.include-stacktrace=never
+
+server.port=8080
